Update docker to allow TTY
  - from command line with 'docker run --rm -it web ash' the '-t' is allowing for a pseudo terminal
    to do the same with docker-compose web (the application) service add 'tty: true'

    an example of why this is helpful is when using the 'passwd' cmd to change a users password. If using just '-i' (interactive),
    on many terminals without also using '-t' the contents of the passowrd change are visible. When '-t' is added
    then the 'passwd' command witholds the changed password. This is more secure

    Anyways, I forgot to set this up when creating the original compose file! Oops!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     env_file:
       - .env/development/database
       - .env/development/web
+    tty: true
 
   # redis:
   #   image: redis:7.0.11-alpine3.18
