--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,53 @@
 version: '3.7'
 
+x-app: &default-app
+  build:
+    context: "."
+    target: "app"
+    args:
+      - "UID=${UID:-1000}"
+      - "GID=${GID:-1000}"
+      - "RAILS_ENV=${RAILS_ENV:-production}"
+      - "NODE_ENV=${NODE_ENV:-production}"
+  env_file:
+    - .env/development/database
+    - .env/development/web
+  volumes:
+    - .:/usr/src/app
+    - gem_cache_homey_project_tracker:/gems
+  tty: true
+
+x-assets: &default-assets
+  build:
+    context: "."
+    target: "assets"
+    args:
+      - "UID=${UID:-1000}"
+      - "GID=${GID:-1000}"
+      - "RAILS_ENV=${RAILS_ENV:-production}"
+      - "NODE_ENV=${NODE_ENV:-production}"
+  env_file:
+    - .env/development/database
+    - .env/development/web
+  volumes:
+    - .:/usr/src/app
+    - gem_cache_homey_project_tracker:/gems
+  tty: true
+
 services:
+  css:
+    <<: *default-assets
+    # TODO: figure out way to be environment agnostic!
+    command: "/gems/ruby/3.2.0/gems/tailwindcss-rails-2.0.29-x86_64-linux/exe/x86_64-linux/tailwindcss \
+      -i ./app/assets/stylesheets/application.tailwind.css \
+      -o ./app/assets/builds/tailwind.css \
+      -c ./config/tailwind.config.js --watch"
+
   web:
-    build: .
+    <<: *default-app
     ports:
       - 3025:3000
       - 4000:4000
-    volumes:
-      - .:/usr/src/app
-      - gem_cache_homey_project_tracker:/gems
-    env_file:
-      - .env/development/database
-      - .env/development/web
-    tty: true
 
   # redis:
   #   image: redis:7.0.11-alpine3.18
